# Group3-Navigation-Robot

./: .gitignore  README.md  config.py  install.sh  requirements.txt  robot_control_ui.py
Button_Door_Detection/: test_yolo.py
SLAM_navigation/SLAM_comparision/: gmapping.pgm  gmapping.yaml  karto.pgm  karto.yaml
SLAM_navigation/navigation/: Project.launch  Readme.txt  move_base.launch  path_planning.py  teb_local_planner_params.yaml
SLAM_navigation/new/: Readme.txt  initial_pose.py  path_planning.py
UI_Sample/: UI_sample.py
navibot/: CMakeLists.txt  map_location.docx  operation_steps.txt  package.xml
navibot/launch/: om_with_tb3_home1.launch  om_with_tb3_layer1.launch  om_with_tb3_navigation.launch  om_with_tb3_navigation_old.launch  om_with_tb3_navigation_original.launch
navibot/map/: home1.pgm  home1.yaml  layer1.pgm  layer1.yaml  layer2.pgm  layer2.yaml  layer3.pgm  layer3.yaml
navibot/scripts/: button_approacher.py  initial_pose.py  navigation_gui.py  path_planning.py  touch_button.py
navibot/world/: layer1.world  layer2.world  layer3.world
navibot_gazebo/: CMakeLists.txt  floor1.world  package.xml
navibot_gazebo/launch/: gazebo.launch
navibot_voice/: CMakeLists.txt  package.xml
navibot_voice/launch/: voice_command.launch
navibot_voice/scripts/: test_key.py  voice_command.py
yolo_training/: Yolov8训练.ipynb  classes.txt  notes.json
yolo_training/labels/: 14ed851f-button1.txt  6025f31c-button4.txt  65fb4a7d-button7.txt  8254f1f9-button2.txt  d8137ea6-button5.txt  dcc94cdc-button6.txt  e845f116-button3.txt
